# rust-learning

./: .gitignore
day1_references/: Cargo.toml
day1_references/src/: exclusive_references.rs  geometry.rs  main.rs  reference_validity.rs  shared_references.rs  slices.rs  strings.rs
day1_tuples_arrays/: Cargo.toml
day1_tuples_arrays/src/: arrays.rs  main.rs  nested_array.rs  tuples.rs
day1_user_defined_types/: Cargo.toml
day1_user_defined_types/src/: consts.rs  elevator_event.rs  enums.rs  main.rs  static_.rs  structs.rs  type_aliases.rs
day_one_control_flow/: Cargo.toml
day_one_control_flow/src/: block_scope.rs  break_continue.rs  collatze.rs  functions.rs  if_expression.rs  labels.rs  loops.rs  macros.rs  main.rs  match_expression.rs
excel-file-processor/: Cargo.toml
excel-file-processor/src/: balance_calculation.rs  convert_csv_to_excel.rs  convert_excel_to_csv.rs  main.rs  validation_check_parallal.rs  validation_check_synchornize.rs
exercise/: Cargo.toml
exercise/src/: _derive.rs  _traits.rs  array.rs  associated_types_traits.rs  blocks_scopes.rs  collatz_sequence.rs  condition.rs  const_example.rs  elevator_events.rs  enums.rs  expression_evaluation.rs  functions.rs  geometry.rs  labels.rs  logger_trait.rs  loop_test.rs  macros.rs  main.rs  methods.rs  named_structs.rs  nested_arrays.rs  pattern_matching.rs  references.rs  static_example.rs  supertraits.rs  tuple.rs  (+2 more)
hello-rust-example/: debug  debug.rs  formate_display.rs  hello  hello.rs
hello_type_values/: Cargo.toml
my_proc_macro/: Cargo.toml
rustlings_exercises/: Cargo.toml
(+44 files in other folders)
